--- a/chaps.bib
+++ b/chaps.bib
@@ -1,24 +1,10 @@
-@incollection{Woolley_2020,
-	doi = {10.1016/b978-0-12-816400-6.00008-0},
-	url = {https://doi.org/10.1016%2Fb978-0-12-816400-6.00008-0},
+@incollection{Telch_2020,
+	doi = {10.1037/0000150-002},
+	url = {https://doi.org/10.1037%2F0000150-002},
 	year = 2020,
-	publisher = {Elsevier},
-	pages = {181--203},
-	author = {Jacqueline D. Woolley and Louise Bunce and Elizabeth A. Boerger},
-	title = {Relations between imagination and creativity},
-	booktitle = {Creativity and the Wandering Mind}
-}
-@InCollection{1,
-  title = {Development of imagination and fantasy},
-  author = {Jacqueline Woolley},
-  booktitle = {Encyclopedia of Infant and Early Childhood Development, 2nd edition, vol. 1. Elsevier},
-  year = {2020},
-  publisher = {.},
-}
-@InCollection{2,
-  title = {Development of the fantasy-reality distinction},
-  author = {Jacqueline Woolley},
-  booktitle = {The Cambridge Handbook of the Imagination. Cambridge University Press.},
-  year = {2020},
-  publisher = {.},
+	publisher = {American Psychological Association},
+	pages = {27--44},
+	author = {Michael J. Telch and Eric D. Zaizar},
+	title = {Safety behaviors.},
+	booktitle = {Clinical handbook of fear and anxiety: Maintenance processes and treatment mechanisms.}
 }
