--- a/pubs.bib
+++ b/pubs.bib
@@ -1,88 +1,310 @@
-@article{1Nissel_2022,
-	doi = {10.1017/s0140525x21002284},
-	url = {https://doi.org/10.1017%2Fs0140525x21002284},
-	year = 2022,
-	publisher = {Cambridge University Press ({CUP})},
-	volume = {45},
-	author = {Jenny E. Nissel and Jacqueline D. Woolley},
-	title = {Brave new world: Imaginative fictions offer simulated safety and actual benefits},
-	journal = {Behavioral and Brain Sciences}
-}
-@article{2Dore_2022,
-	doi = {10.1111/bjdp.12437},
-	url = {https://doi.org/10.1111%2Fbjdp.12437},
+@article{1Cuyler_2022,
+	doi = {10.3389/fdgth.2022.976001},
+	url = {https://doi.org/10.3389%2Ffdgth.2022.976001},
 	year = 2022,
 	month = {nov},
-	publisher = {Wiley},
-	author = {Rebecca A. Dore and Jacqueline Woolley and Jenny Nissel and John G. Hixon},
-	title = {Never trust a stranger: Effects of explicit belief statements from strangers on children{\textquotesingle}s reality status beliefs and beliefs about consensus},
-	journal = {British Journal of Developmental Psychology}
+	publisher = {Frontiers Media {SA}},
+	volume = {4},
+	author = {Robert N. Cuyler and Rahul Katdare and Simon Thomas and Michael~J. Telch},
+	title = {Real-world outcomes of an innovative digital therapeutic for treatment of panic disorder and {PTSD}: A 1,500 patient effectiveness study},
+	journal = {Frontiers in Digital Health}
 }
-@article{3Li_2022,
-	doi = {10.1016/j.cogdev.2022.101162},
-	url = {https://doi.org/10.1016%2Fj.cogdev.2022.101162},
+@article{2Telch_2022,
+	doi = {10.1016/j.cct.2022.106933},
+	url = {https://doi.org/10.1016%2Fj.cct.2022.106933},
+	year = 2022,
+	month = {nov},
+	publisher = {Elsevier {BV}},
+	volume = {122},
+	pages = {106933},
+	author = {Michael J. Telch and Caitlin M. Fischer and Eric D. Zaizar and Mikael Rubin and Santiago Papini},
+	title = {Use of Cannabidiol ({CBD}) oil in the treatment of {PTSD}: Study design and rationale for a placebo-controlled randomized clinical trial},
+	journal = {Contemporary Clinical Trials}
+}
+@article{3Zoellner_2022,
+	doi = {10.1016/j.cbpra.2022.04.005},
+	url = {https://doi.org/10.1016%2Fj.cbpra.2022.04.005},
+	year = 2022,
+	month = {jun},
+	publisher = {Elsevier {BV}},
+	author = {Lori A. Zoellner and Elizabeth A. Lehinger and Peter L. Rosencrans and Sarah M. Cornell-Maier and Edna B. Foa and Michael J. Telch and Francisco Gonzalez-Lima and Michele A. Bedard-Gilligan},
+	title = {Brief Imaginal Exposure for {PTSD}: Trajectories of Change in Distress},
+	journal = {Cognitive and Behavioral Practice}
+}
+@article{4Rubin_2022,
+	doi = {10.1080/16506073.2022.2053882},
+	url = {https://doi.org/10.1080%2F16506073.2022.2053882},
 	year = 2022,
 	month = {apr},
-	publisher = {Elsevier {BV}},
-	volume = {62},
-	pages = {101162},
-	author = {Hui Li and Haoxue Yu and Jacqueline D. Woolley and Lihanjing Wu},
-	title = {The impact of informant type on children{\textquotesingle}s animal knowledge learning},
-	journal = {Cognitive Development}
+	publisher = {Informa {UK} Limited},
+	volume = {51},
+	number = {5},
+	pages = {371--387},
+	author = {Mikael Rubin and Karl Muller and Mary M. Hayhoe and Michael J. Telch},
+	title = {Attention guidance augmentation of virtual reality exposure therapy for social anxiety disorder: a pilot randomized controlled trial},
+	journal = {Cognitive Behaviour Therapy}
 }
-@article{4Woolley_2021,
-	doi = {10.1111/cdev.13500},
-	url = {https://doi.org/10.1111%2Fcdev.13500},
-	year = 2021,
+@article{5Rubin_2022,
+	doi = {10.3758/s13414-021-02430-x},
+	url = {https://doi.org/10.3758%2Fs13414-021-02430-x},
+	year = 2022,
 	month = {jan},
-	publisher = {Wiley},
-	volume = {92},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {84},
+	number = {2},
+	pages = {396--407},
+	author = {Mikael Rubin and Sihang Guo and Karl Muller and Ruohan Zhang and Michael J. Telch and Mary M. Hayhoe},
+	title = {Selective visual attention during public speaking in an immersive context},
+	journal = {Attention, Perception, {\&} Psychophysics}
+}
+@article{6Zaizar_2022,
+	doi = {10.1016/j.cct.2022.106847},
+	url = {https://doi.org/10.1016%2Fj.cct.2022.106847},
+	year = 2022,
+	month = {aug},
+	publisher = {Elsevier {BV}},
+	volume = {119},
+	pages = {106847},
+	author = {Eric D. Zaizar and Santiago Papini and Patrick O{\textquotesingle}Connor and Michael J. Telch},
+	title = {Impact of cannabidiol-rich hemp extract oil on reconsolidation disruption of naturalistic interoceptive aversive memory in humans: Protocol for a randomized clinical trial},
+	journal = {Contemporary Clinical Trials}
+}
+@article{7Rubin_2021,
+	doi = {10.1080/02699931.2021.2016639},
+	url = {https://doi.org/10.1080%2F02699931.2021.2016639},
+	year = 2021,
+	month = {dec},
+	publisher = {Informa {UK} Limited},
+	volume = {36},
 	number = {3},
-	author = {Jacqueline D. Woolley and Jenny Nissel and Ansley T. Gilpin},
-	title = {Children's Use of Testimony to Determine Reality Status},
-	journal = {Child Development}
+	pages = {527--534},
+	author = {Mikael Rubin and Nilavra Bhattacharya and Jacek Gwizdka and Zenzi Griffin and Michael Telch},
+	title = {The influence of {PTSD} symptoms on selective visual attention while reading},
+	journal = {Cognition and Emotion}
 }
-@article{5Ghossainy_2021,
-	doi = {10.1177/1474704920986860},
-	url = {https://doi.org/10.1177%2F1474704920986860},
+@article{8Cobb_2021,
+	doi = {10.1017/s0033291721003548},
+	url = {https://doi.org/10.1017%2Fs0033291721003548},
 	year = 2021,
-	month = {jan},
-	publisher = {{SAGE} Publications},
-	volume = {19},
-	number = {1},
-	pages = {147470492098686},
-	author = {Maliki E. Ghossainy and Laith Al-Shawaf and Jacqueline D. Woolley},
-	title = {Epistemic Vigilance in Early Ontogeny: Children's Use of Nonverbal Behavior to Detect Deception},
-	journal = {Evolutionary Psychology}
+	month = {nov},
+	publisher = {Cambridge University Press ({CUP})},
+	pages = {1--8},
+	author = {Adam R. Cobb and Mikael Rubin and Deborah L. Stote and Brian C. Baldwin and Han-Joo Lee and Ahmad R. Hariri and Michael J. Telch},
+	title = {Hippocampal volume and volume asymmetry prospectively predict {PTSD} symptom emergence among Iraq-deployed soldiers},
+	journal = {Psychological Medicine}
 }
-@article{6Bunce_2021,
-	doi = {10.1016/j.cogdev.2020.100979},
-	url = {https://doi.org/10.1016%2Fj.cogdev.2020.100979},
+@article{9Rubin_2021,
+	doi = {10.1016/j.jpsychires.2021.07.053},
+	url = {https://doi.org/10.1016%2Fj.jpsychires.2021.07.053},
 	year = 2021,
-	month = {jan},
-	publisher = {Elsevier {BV}},
-	volume = {57},
-	pages = {100979},
-	author = {Louise Bunce and Jacqueline D. Woolley},
-	title = {Fantasy orientation and creativity in childhood: A closer look},
-	journal = {Cognitive Development}
-}
-@article{7Woolley_2020,
-	doi = {10.1037/dev0001104},
-	url = {https://doi.org/10.1037%2Fdev0001104},
-	year = 2020,
 	month = {oct},
-	publisher = {American Psychological Association ({APA})},
-	volume = {56},
+	publisher = {Elsevier {BV}},
+	volume = {142},
+	pages = {198--203},
+	author = {Mikael Rubin and Alexandra Bicki and Santiago Papini and Jasper A.J. Smits and Michael J. Telch and Jane S. Gray},
+	title = {Distinct trajectories of depression symptoms in early and middle adolescence: Preliminary evidence from longitudinal network analysis},
+	journal = {Journal of Psychiatric Research}
+}
+@article{10Rubin_2021,
+	doi = {10.1007/s12671-021-01726-1},
+	url = {https://doi.org/10.1007%2Fs12671-021-01726-1},
+	year = 2021,
+	month = {aug},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {12},
 	number = {10},
-	pages = {1866--1878},
-	author = {Jacqueline D. Woolley and Kelsey A. Kelley},
-	title = {{\textquotedblleft}When something like a ladybug lands on you{\textquotedblright}: Origins and development of the concept of luck.},
-	journal = {Developmental Psychology}
+	pages = {2544--2551},
+	author = {Mikael Rubin and Santiago Papini and Justin Dainer-Best and Eric D. Zaizar and Jasper A. J. Smits and Michael J. Telch},
+	title = {Exploratory and Confirmatory Bayesian Networks Identify the Central Role of Non-judging in Symptoms of Depression},
+	journal = {Mindfulness}
+}
+@article{11Rubin_2021,
+	doi = {10.1525/collabra.28115},
+	url = {https://doi.org/10.1525%2Fcollabra.28115},
+	year = 2021,
+	publisher = {University of California Press},
+	volume = {7},
+	number = {1},
+	author = {Mikael Rubin and Michael Telch and Justin Dainer-Best},
+	title = {In Game as in Life? Linking Decision-making to Real-world Behavior},
+	journal = {Collabra: Psychology}
+}
+@article{12Guo_2021,
+	doi = {10.1167/jov.21.9.2860},
+	url = {https://doi.org/10.1167%2Fjov.21.9.2860},
+	year = 2021,
+	month = {sep},
+	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
+	volume = {21},
+	number = {9},
+	pages = {2860},
+	author = {Sihang Guo and Mikael Rubin and Ruohan Zhang and Karl Muller and Michael Telch and Mary Hayhoe},
+	title = {Attentional Capture during Public Speaking in Virtual Reality Environment},
+	journal = {Journal of Vision}
+}
+@article{13Zaizar_2021,
+	doi = {10.1017/s0033291721002270},
+	url = {https://doi.org/10.1017%2Fs0033291721002270},
+	year = 2021,
+	month = {jul},
+	publisher = {Cambridge University Press ({CUP})},
+	pages = {1--10},
+	author = {Eric D. Zaizar and Santiago Papini and F. Gonzalez-Lima and Michael J. Telch},
+	title = {Singular and combined effects of transcranial infrared laser stimulation and exposure therapy on pathological fear: a randomized clinical trial},
+	journal = {Psychological Medicine}
+}
+@article{14Cobb_2021,
+	doi = {10.1016/j.janxdis.2020.102344},
+	url = {https://doi.org/10.1016%2Fj.janxdis.2020.102344},
+	year = 2021,
+	month = {mar},
+	publisher = {Elsevier {BV}},
+	volume = {78},
+	pages = {102344},
+	author = {Adam R. Cobb and Patrick O'Connor and Eric Zaizar and Kevin Caulfield and Francisco Gonzalez-Lima and Michael J. Telch},
+	title = {{tDCS}-Augmented in vivo exposure therapy for specific fears: A randomized clinical trial},
+	journal = {Journal of Anxiety Disorders}
+}
+@article{15Rubin_2020,
+	doi = {10.1002/jts.22574},
+	url = {https://doi.org/10.1002%2Fjts.22574},
+	year = 2021,
+	month = {sep},
+	publisher = {Wiley},
+	volume = {34},
+	number = {1},
+	pages = {182--189},
+	author = {Mikael Rubin and Michael J. Telch},
+	title = {Pupillary Response to Affective Voices: Physiological Responsivity and Posttraumatic Stress Disorder},
+	journal = {Journal of Traumatic Stress}
+}
+@article{16Feldman_2021,
+	doi = {10.1037/tra0000957},
+	url = {https://doi.org/10.1037%2Ftra0000957},
+	year = 2021,
+	month = {jan},
+	publisher = {American Psychological Association ({APA})},
+	volume = {13},
+	number = {1},
+	pages = {75--83},
+	author = {Talya R. Feldman and Caryn L. Carlson and Leslie K. Rice and Marc I. Kruse and Christopher G. Beevers and Michael J. Telch and Robert A. Josephs},
+	title = {Factors predicting the development of psychopathology among first responders: A prospective, longitudinal study.},
+	journal = {Psychological Trauma: Theory, Research, Practice, and Policy}
+}
+@article{17Powers_2021,
+	doi = {10.1097/ajp.0000000000000958},
+	url = {https://doi.org/10.1097%2Fajp.0000000000000958},
+	year = 2021,
+	month = {jul},
+	publisher = {Ovid Technologies (Wolters Kluwer Health)},
+	volume = {37},
+	number = {9},
+	pages = {678--687},
+	author = {Mark B. Powers and Emily Carl and Andrew Levihn-Coon and Melissa Van Veldhuizen and Andrew Caven and Jamie Pogue and Michelle Fresnedo and Emma D. Turner and Maris Adams and Kiara Leonard and Haley Conroy and Crystal Lantrip and Thomas Caven and Claire Isbell and Justin Regner and Emily Garmon and Michael Foreman and Wayne Miller and Lorie A. Fares and Per Carlbring and Michael W. Otto and Daniel N. Weiss and James Hughes and Jay M. Bernhardt and Rob Roy and Jeeyun Oh and Ryan Copt and Jonathan MacClements and Ann M. Warren and Benjamin Rosenfield and David Rosenfield and Sean Minns and Michael J. Telch and Jasper A.J. Smits},
+	title = {Nonpharmacologic Pain Management Among Hospitalized Inpatients},
+	journal = {The Clinical Journal of Pain}
+}
+@article{18Rubin_2020,
+	doi = {10.1016/j.brat.2020.103706},
+	url = {https://doi.org/10.1016%2Fj.brat.2020.103706},
+	year = 2020,
+	month = {nov},
+	publisher = {Elsevier {BV}},
+	volume = {134},
+	pages = {103706},
+	author = {Mikael Rubin and Sean Minns and Karl Muller and Matthew H. Tong and Mary M. Hayhoe and Michael J. Telch},
+	title = {Avoidance of social threat: Evidence from eye movements during a public speaking challenge using 360{\textdegree}- video},
+	journal = {Behaviour Research and Therapy}
+}
+@article{19Rubin_2019,
+	doi = {10.1080/07481187.2019.1595219},
+	url = {https://doi.org/10.1080%2F07481187.2019.1595219},
+	year = 2020,
+	month = {may},
+	publisher = {Informa {UK} Limited},
+	volume = {44},
+	number = {9},
+	pages = {552--560},
+	author = {Mikael Rubin and Baylee Hawkins and Adam Cobb and Michael J. Telch},
+	title = {Emotional reactivity to grief-related expressive writing},
+	journal = {Death Studies}
+}
+@article{20Papini_2019,
+	doi = {10.1002/jts.22379},
+	url = {https://doi.org/10.1002%2Fjts.22379},
+	year = 2020,
+	month = {jul},
+	publisher = {Wiley},
+	volume = {33},
+	number = {1},
+	pages = {64--71},
+	author = {Santiago Papini and Mikael Rubin and Michael J. Telch and Jasper A. J. Smits and Denise A. Hien},
+	title = {Pretreatment Posttraumatic Stress Disorder Symptom Network Metrics Predict the Strength of the Association Between Node Change and Network Change During Treatment},
+	journal = {Journal of Traumatic Stress}
+}
+@article{21Lancaster_2020,
+	doi = {10.1016/j.brat.2020.103730},
+	url = {https://doi.org/10.1016%2Fj.brat.2020.103730},
+	year = 2020,
+	month = {dec},
+	publisher = {Elsevier {BV}},
+	volume = {135},
+	pages = {103730},
+	author = {Cynthia L. Lancaster and Marie-H. Monfils and Michael J. Telch},
+	title = {Augmenting exposure therapy with pre-extinction fear memory reactivation and deepened extinction: A randomized controlled trial},
+	journal = {Behaviour Research and Therapy}
 }
 @Article{1,
-  title = {How Chinese and American children use consensus to make possibility judgments},
-  author = {Jacqueline Woolley},
-  journal = {Journal of Cognition and Culture},
+  title = {Effects of Cannabidiol on Memory Reconsolidation and Trauma-Related Symptoms: A Randomized Clinical Trial},
+  author = {Michael Telch},
+  journal = {Cognitive Behavior Therapy},
   year = {2023},
+}
+@Article{2,
+  title = {Low Reliability when Determining Criterion A for Posttraumatic Stress Disorder from Self-Reported Descriptions of Traumatic Events: The Need for Transparent Methods },
+  author = {Michael Telch},
+  journal = {Psychological Trauma: Theory, Research, Practice, and Policy.},
+  year = {2023},
+}
+@Article{3,
+  title = {Social Anxiety; Internet-based research; social stressor challenge; eye tracking; audio vocal indicator},
+  author = {Michael Telch},
+  journal = {Behavior Therapy},
+  year = {2023},
+}
+@Article{4,
+  title = {al Remote Research on Social Anxiety Using a New Teleconferencing Paradigm},
+  author = {Michael Telch},
+  journal = {Clinical Psychological Science},
+  year = {2023},
+}
+@Article{5,
+  title = {Multimodal Remote Research on Social Anxiety Using a New Teleconferencing Paradigm},
+  author = {Michael Telch},
+  journal = {Journal of Anxiety Disorders},
+  year = {2022},
+}
+@Article{6,
+  title = {Impact of Cannabidiol-Rich Hemp Extract Oil on Reconsolidation Disruption of Naturalistic Interoceptive Aversive Memory in Humans: Protocol for a Randomized Clinical Trial},
+  author = {Michael Telch},
+  journal = {Contemporary Clinical Trials},
+  year = {2022},
+}
+@Article{7,
+  title = {Brief imaginal exposure for PTSD:  Trajectories of change in distress},
+  author = {Michael Telch},
+  journal = {Cognitive and Behavioral Practice},
+  year = {2022},
+}
+@Article{8,
+  title = {Childhood family cohesiveness prospectively moderates risk for warzone psychopathology among deployed U.S. soldiers.},
+  author = {Michael Telch},
+  journal = {Journal of Traumatic Stress},
+  year = {2022},
+}
+@Article{9,
+  title = {Targeting Anxiety Sensitivity with Evidence Based Psychoeducation: A Randomized Waitlist-Controlled Trial of a Brief Standalone Digital Intervention},
+  author = {Michael Telch},
+  journal = {.},
+  year = {2022},
 }
