--- a/chaps.bib
+++ b/chaps.bib
@@ -1,10 +1,7 @@
-@incollection{Telch_2020,
-	doi = {10.1037/0000150-002},
-	url = {https://doi.org/10.1037%2F0000150-002},
-	year = 2020,
-	publisher = {American Psychological Association},
-	pages = {27--44},
-	author = {Michael J. Telch and Eric D. Zaizar},
-	title = {Safety behaviors.},
-	booktitle = {Clinical handbook of fear and anxiety: Maintenance processes and treatment mechanisms.}
+@InCollection{1,
+  title = {The relationship between cognitive control and episodic memory across the adult lifespan. },
+  author = {Audrey Duarte},
+  booktitle = {Handbook of Cognitive Aging: A Life Course Perspective},
+  year = {2020},
+  publisher = {.},
 }
