--- a/pubs.bib
+++ b/pubs.bib
@@ -1,310 +1,126 @@
-@article{1Cuyler_2022,
-	doi = {10.3389/fdgth.2022.976001},
-	url = {https://doi.org/10.3389%2Ffdgth.2022.976001},
-	year = 2022,
-	month = {nov},
-	publisher = {Frontiers Media {SA}},
-	volume = {4},
-	author = {Robert N. Cuyler and Rahul Katdare and Simon Thomas and Michael~J. Telch},
-	title = {Real-world outcomes of an innovative digital therapeutic for treatment of panic disorder and {PTSD}: A 1,500 patient effectiveness study},
-	journal = {Frontiers in Digital Health}
-}
-@article{2Telch_2022,
-	doi = {10.1016/j.cct.2022.106933},
-	url = {https://doi.org/10.1016%2Fj.cct.2022.106933},
-	year = 2022,
-	month = {nov},
-	publisher = {Elsevier {BV}},
-	volume = {122},
-	pages = {106933},
-	author = {Michael J. Telch and Caitlin M. Fischer and Eric D. Zaizar and Mikael Rubin and Santiago Papini},
-	title = {Use of Cannabidiol ({CBD}) oil in the treatment of {PTSD}: Study design and rationale for a placebo-controlled randomized clinical trial},
-	journal = {Contemporary Clinical Trials}
-}
-@article{3Zoellner_2022,
-	doi = {10.1016/j.cbpra.2022.04.005},
-	url = {https://doi.org/10.1016%2Fj.cbpra.2022.04.005},
-	year = 2022,
-	month = {jun},
-	publisher = {Elsevier {BV}},
-	author = {Lori A. Zoellner and Elizabeth A. Lehinger and Peter L. Rosencrans and Sarah M. Cornell-Maier and Edna B. Foa and Michael J. Telch and Francisco Gonzalez-Lima and Michele A. Bedard-Gilligan},
-	title = {Brief Imaginal Exposure for {PTSD}: Trajectories of Change in Distress},
-	journal = {Cognitive and Behavioral Practice}
-}
-@article{4Rubin_2022,
-	doi = {10.1080/16506073.2022.2053882},
-	url = {https://doi.org/10.1080%2F16506073.2022.2053882},
-	year = 2022,
-	month = {apr},
-	publisher = {Informa {UK} Limited},
-	volume = {51},
-	number = {5},
-	pages = {371--387},
-	author = {Mikael Rubin and Karl Muller and Mary M. Hayhoe and Michael J. Telch},
-	title = {Attention guidance augmentation of virtual reality exposure therapy for social anxiety disorder: a pilot randomized controlled trial},
-	journal = {Cognitive Behaviour Therapy}
-}
-@article{5Rubin_2022,
-	doi = {10.3758/s13414-021-02430-x},
-	url = {https://doi.org/10.3758%2Fs13414-021-02430-x},
-	year = 2022,
-	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {84},
-	number = {2},
-	pages = {396--407},
-	author = {Mikael Rubin and Sihang Guo and Karl Muller and Ruohan Zhang and Michael J. Telch and Mary M. Hayhoe},
-	title = {Selective visual attention during public speaking in an immersive context},
-	journal = {Attention, Perception, {\&} Psychophysics}
-}
-@article{6Zaizar_2022,
-	doi = {10.1016/j.cct.2022.106847},
-	url = {https://doi.org/10.1016%2Fj.cct.2022.106847},
-	year = 2022,
-	month = {aug},
-	publisher = {Elsevier {BV}},
-	volume = {119},
-	pages = {106847},
-	author = {Eric D. Zaizar and Santiago Papini and Patrick O{\textquotesingle}Connor and Michael J. Telch},
-	title = {Impact of cannabidiol-rich hemp extract oil on reconsolidation disruption of naturalistic interoceptive aversive memory in humans: Protocol for a randomized clinical trial},
-	journal = {Contemporary Clinical Trials}
-}
-@article{7Rubin_2021,
-	doi = {10.1080/02699931.2021.2016639},
-	url = {https://doi.org/10.1080%2F02699931.2021.2016639},
+@article{1Mirjalili_2022,
+	doi = {10.1016/j.neuroimage.2021.118851},
+	url = {https://doi.org/10.1016%2Fj.neuroimage.2021.118851},
 	year = 2021,
-	month = {dec},
-	publisher = {Informa {UK} Limited},
-	volume = {36},
-	number = {3},
-	pages = {527--534},
-	author = {Mikael Rubin and Nilavra Bhattacharya and Jacek Gwizdka and Zenzi Griffin and Michael Telch},
-	title = {The influence of {PTSD} symptoms on selective visual attention while reading},
-	journal = {Cognition and Emotion}
+	month = {feb},
+	publisher = {Elsevier {BV}},
+	volume = {247},
+	pages = {118851},
+	author = {Soroush Mirjalili and Patrick Powell and Jonathan Strunk and Taylor James and Audrey Duarte},
+	title = {Evaluation of classification approaches for distinguishing brain states predictive of episodic memory performance from electroencephalography},
+	journal = {{NeuroImage}}
 }
-@article{8Cobb_2021,
-	doi = {10.1017/s0033291721003548},
-	url = {https://doi.org/10.1017%2Fs0033291721003548},
+@article{2James_2021,
+	doi = {10.1037/bul0000344},
+	url = {https://doi.org/10.1037%2Fbul0000344},
 	year = 2021,
 	month = {nov},
-	publisher = {Cambridge University Press ({CUP})},
-	pages = {1--8},
-	author = {Adam R. Cobb and Mikael Rubin and Deborah L. Stote and Brian C. Baldwin and Han-Joo Lee and Ahmad R. Hariri and Michael J. Telch},
-	title = {Hippocampal volume and volume asymmetry prospectively predict {PTSD} symptom emergence among Iraq-deployed soldiers},
-	journal = {Psychological Medicine}
+	publisher = {American Psychological Association ({APA})},
+	volume = {147},
+	number = {11},
+	pages = {1184--1214},
+	author = {Taylor A. James and Samuel Weiss-Cowie and Zachary Hopton and Paul Verhaeghen and Vonetta M. Dotson and Audrey Duarte},
+	title = {Depression and episodic memory across the adult lifespan: A meta-analytic review.},
+	journal = {Psychological Bulletin}
 }
-@article{9Rubin_2021,
-	doi = {10.1016/j.jpsychires.2021.07.053},
-	url = {https://doi.org/10.1016%2Fj.jpsychires.2021.07.053},
+@article{3Justus_2021,
+	doi = {10.1038/s41598-021-99898-2},
+	url = {https://doi.org/10.1038%2Fs41598-021-99898-2},
 	year = 2021,
 	month = {oct},
-	publisher = {Elsevier {BV}},
-	volume = {142},
-	pages = {198--203},
-	author = {Mikael Rubin and Alexandra Bicki and Santiago Papini and Jasper A.J. Smits and Michael J. Telch and Jane S. Gray},
-	title = {Distinct trajectories of depression symptoms in early and middle adolescence: Preliminary evidence from longitudinal network analysis},
-	journal = {Journal of Psychiatric Research}
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {11},
+	number = {1},
+	author = {Sidni A. Justus and Patrick S. Powell and Audrey Duarte},
+	title = {Intact context memory performance in adults with autism spectrum disorder},
+	journal = {Scientific Reports}
 }
-@article{10Rubin_2021,
-	doi = {10.1007/s12671-021-01726-1},
-	url = {https://doi.org/10.1007%2Fs12671-021-01726-1},
+@article{4Hokett_2021,
+	doi = {10.1016/j.neubiorev.2021.05.010},
+	url = {https://doi.org/10.1016%2Fj.neubiorev.2021.05.010},
 	year = 2021,
 	month = {aug},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {12},
-	number = {10},
-	pages = {2544--2551},
-	author = {Mikael Rubin and Santiago Papini and Justin Dainer-Best and Eric D. Zaizar and Jasper A. J. Smits and Michael J. Telch},
-	title = {Exploratory and Confirmatory Bayesian Networks Identify the Central Role of Non-judging in Symptoms of Depression},
-	journal = {Mindfulness}
-}
-@article{11Rubin_2021,
-	doi = {10.1525/collabra.28115},
-	url = {https://doi.org/10.1525%2Fcollabra.28115},
-	year = 2021,
-	publisher = {University of California Press},
-	volume = {7},
-	number = {1},
-	author = {Mikael Rubin and Michael Telch and Justin Dainer-Best},
-	title = {In Game as in Life? Linking Decision-making to Real-world Behavior},
-	journal = {Collabra: Psychology}
-}
-@article{12Guo_2021,
-	doi = {10.1167/jov.21.9.2860},
-	url = {https://doi.org/10.1167%2Fjov.21.9.2860},
-	year = 2021,
-	month = {sep},
-	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
-	volume = {21},
-	number = {9},
-	pages = {2860},
-	author = {Sihang Guo and Mikael Rubin and Ruohan Zhang and Karl Muller and Michael Telch and Mary Hayhoe},
-	title = {Attentional Capture during Public Speaking in Virtual Reality Environment},
-	journal = {Journal of Vision}
-}
-@article{13Zaizar_2021,
-	doi = {10.1017/s0033291721002270},
-	url = {https://doi.org/10.1017%2Fs0033291721002270},
-	year = 2021,
-	month = {jul},
-	publisher = {Cambridge University Press ({CUP})},
-	pages = {1--10},
-	author = {Eric D. Zaizar and Santiago Papini and F. Gonzalez-Lima and Michael J. Telch},
-	title = {Singular and combined effects of transcranial infrared laser stimulation and exposure therapy on pathological fear: a randomized clinical trial},
-	journal = {Psychological Medicine}
-}
-@article{14Cobb_2021,
-	doi = {10.1016/j.janxdis.2020.102344},
-	url = {https://doi.org/10.1016%2Fj.janxdis.2020.102344},
-	year = 2021,
-	month = {mar},
 	publisher = {Elsevier {BV}},
-	volume = {78},
-	pages = {102344},
-	author = {Adam R. Cobb and Patrick O'Connor and Eric Zaizar and Kevin Caulfield and Francisco Gonzalez-Lima and Michael J. Telch},
-	title = {{tDCS}-Augmented in vivo exposure therapy for specific fears: A randomized clinical trial},
-	journal = {Journal of Anxiety Disorders}
+	volume = {127},
+	pages = {675--688},
+	author = {Emily Hokett and Aditi Arunmozhi and Jessica Campbell and Paul Verhaeghen and Audrey Duarte},
+	title = {A systematic review and meta-analysis of individual differences in naturalistic sleep quality and episodic memory performance in young and older adults},
+	journal = {Neuroscience {\&} Biobehavioral Reviews}
 }
-@article{15Rubin_2020,
-	doi = {10.1002/jts.22574},
-	url = {https://doi.org/10.1002%2Fjts.22574},
-	year = 2021,
-	month = {sep},
-	publisher = {Wiley},
-	volume = {34},
-	number = {1},
-	pages = {182--189},
-	author = {Mikael Rubin and Michael J. Telch},
-	title = {Pupillary Response to Affective Voices: Physiological Responsivity and Posttraumatic Stress Disorder},
-	journal = {Journal of Traumatic Stress}
-}
-@article{16Feldman_2021,
-	doi = {10.1037/tra0000957},
-	url = {https://doi.org/10.1037%2Ftra0000957},
+@article{5Mirjalili_2021,
+	doi = {10.1523/eneuro.0387-20.2020},
+	url = {https://doi.org/10.1523%2Feneuro.0387-20.2020},
 	year = 2021,
 	month = {jan},
-	publisher = {American Psychological Association ({APA})},
-	volume = {13},
+	publisher = {Society for Neuroscience},
+	volume = {8},
 	number = {1},
-	pages = {75--83},
-	author = {Talya R. Feldman and Caryn L. Carlson and Leslie K. Rice and Marc I. Kruse and Christopher G. Beevers and Michael J. Telch and Robert A. Josephs},
-	title = {Factors predicting the development of psychopathology among first responders: A prospective, longitudinal study.},
-	journal = {Psychological Trauma: Theory, Research, Practice, and Policy}
+	pages = {ENEURO.0387--20.2020},
+	author = {Soroush Mirjalili and Patrick Powell and Jonathan Strunk and Taylor James and Audrey Duarte},
+	title = {Context Memory Encoding and Retrieval Temporal Dynamics are Modulated by Attention across the Adult Lifespan},
+	journal = {eneuro}
 }
-@article{17Powers_2021,
-	doi = {10.1097/ajp.0000000000000958},
-	url = {https://doi.org/10.1097%2Fajp.0000000000000958},
-	year = 2021,
-	month = {jul},
-	publisher = {Ovid Technologies (Wolters Kluwer Health)},
-	volume = {37},
-	number = {9},
-	pages = {678--687},
-	author = {Mark B. Powers and Emily Carl and Andrew Levihn-Coon and Melissa Van Veldhuizen and Andrew Caven and Jamie Pogue and Michelle Fresnedo and Emma D. Turner and Maris Adams and Kiara Leonard and Haley Conroy and Crystal Lantrip and Thomas Caven and Claire Isbell and Justin Regner and Emily Garmon and Michael Foreman and Wayne Miller and Lorie A. Fares and Per Carlbring and Michael W. Otto and Daniel N. Weiss and James Hughes and Jay M. Bernhardt and Rob Roy and Jeeyun Oh and Ryan Copt and Jonathan MacClements and Ann M. Warren and Benjamin Rosenfield and David Rosenfield and Sean Minns and Michael J. Telch and Jasper A.J. Smits},
-	title = {Nonpharmacologic Pain Management Among Hospitalized Inpatients},
-	journal = {The Clinical Journal of Pain}
-}
-@article{18Rubin_2020,
-	doi = {10.1016/j.brat.2020.103706},
-	url = {https://doi.org/10.1016%2Fj.brat.2020.103706},
+@article{6Kim_2020,
+	doi = {10.1002/advs.202000810},
+	url = {https://doi.org/10.1002%2Fadvs.202000810},
 	year = 2020,
-	month = {nov},
-	publisher = {Elsevier {BV}},
-	volume = {134},
-	pages = {103706},
-	author = {Mikael Rubin and Sean Minns and Karl Muller and Matthew H. Tong and Mary M. Hayhoe and Michael J. Telch},
-	title = {Avoidance of social threat: Evidence from eye movements during a public speaking challenge using 360{\textdegree}- video},
-	journal = {Behaviour Research and Therapy}
-}
-@article{19Rubin_2019,
-	doi = {10.1080/07481187.2019.1595219},
-	url = {https://doi.org/10.1080%2F07481187.2019.1595219},
-	year = 2020,
-	month = {may},
-	publisher = {Informa {UK} Limited},
-	volume = {44},
-	number = {9},
-	pages = {552--560},
-	author = {Mikael Rubin and Baylee Hawkins and Adam Cobb and Michael J. Telch},
-	title = {Emotional reactivity to grief-related expressive writing},
-	journal = {Death Studies}
-}
-@article{20Papini_2019,
-	doi = {10.1002/jts.22379},
-	url = {https://doi.org/10.1002%2Fjts.22379},
-	year = 2020,
-	month = {jul},
+	month = {jun},
 	publisher = {Wiley},
-	volume = {33},
-	number = {1},
-	pages = {64--71},
-	author = {Santiago Papini and Mikael Rubin and Michael J. Telch and Jasper A. J. Smits and Denise A. Hien},
-	title = {Pretreatment Posttraumatic Stress Disorder Symptom Network Metrics Predict the Strength of the Association Between Node Change and Network Change During Treatment},
-	journal = {Journal of Traumatic Stress}
+	volume = {7},
+	number = {15},
+	pages = {2000810},
+	author = {Hojoong Kim and Yun-Soung Kim and Musa Mahmood and Shinjae Kwon and Nathan Zavanelli and Hee Seok Kim and You Seung Rim and Fayron Epps and Woon-Hong Yeo},
+	title = {Fully Integrated, Stretchable, Wireless Skin-Conformal Bioelectronics for Continuous Stress Monitoring in Daily Life},
+	journal = {Advanced Science}
 }
-@article{21Lancaster_2020,
-	doi = {10.1016/j.brat.2020.103730},
-	url = {https://doi.org/10.1016%2Fj.brat.2020.103730},
+@article{7Corbett_2020,
+	doi = {10.1162/jocn_a_01582},
+	url = {https://doi.org/10.1162%2Fjocn_a_01582},
 	year = 2020,
-	month = {dec},
+	month = {sep},
+	publisher = {{MIT} Press - Journals},
+	volume = {32},
+	number = {9},
+	pages = {1607--1623},
+	author = {Brittany Corbett and Audrey Duarte},
+	title = {How Proactive Interference during New Associative Learning Impacts General and Specific Memory in Young and Old},
+	journal = {Journal of Cognitive Neuroscience}
+}
+@article{8Dotson_2020,
+	doi = {10.1111/nyas.14268},
+	url = {https://doi.org/10.1111%2Fnyas.14268},
+	year = 2020,
+	month = {mar},
+	publisher = {Wiley},
+	volume = {1464},
+	number = {1},
+	pages = {181--191},
+	author = {Vonetta M. Dotson and Audrey Duarte},
+	title = {The importance of diversity in cognitive neuroscience},
+	journal = {Annals of the New York Academy of Sciences}
+}
+@article{9Corbett_2019,
+	doi = {10.1093/cercor/bhz166},
+	url = {https://doi.org/10.1093%2Fcercor%2Fbhz166},
+	year = 2020,
+	month = {aug},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {30},
+	number = {3},
+	pages = {1291--1306},
+	author = {Brittany Corbett and M Natasha Rajah and Audrey Duarte},
+	title = {Preparing for the Worst: Evidence that Older Adults Proactively Downregulate Negative Affect},
+	journal = {Cerebral Cortex}
+}
+@article{10Pehlivanoglu_2020,
+	doi = {10.1016/j.neuropsychologia.2020.107357},
+	url = {https://doi.org/10.1016%2Fj.neuropsychologia.2020.107357},
+	year = 2020,
+	month = {feb},
 	publisher = {Elsevier {BV}},
-	volume = {135},
-	pages = {103730},
-	author = {Cynthia L. Lancaster and Marie-H. Monfils and Michael J. Telch},
-	title = {Augmenting exposure therapy with pre-extinction fear memory reactivation and deepened extinction: A randomized controlled trial},
-	journal = {Behaviour Research and Therapy}
-}
-@Article{1,
-  title = {Effects of Cannabidiol on Memory Reconsolidation and Trauma-Related Symptoms: A Randomized Clinical Trial},
-  author = {Michael Telch},
-  journal = {Cognitive Behavior Therapy},
-  year = {2023},
-}
-@Article{2,
-  title = {Low Reliability when Determining Criterion A for Posttraumatic Stress Disorder from Self-Reported Descriptions of Traumatic Events: The Need for Transparent Methods },
-  author = {Michael Telch},
-  journal = {Psychological Trauma: Theory, Research, Practice, and Policy.},
-  year = {2023},
-}
-@Article{3,
-  title = {Social Anxiety; Internet-based research; social stressor challenge; eye tracking; audio vocal indicator},
-  author = {Michael Telch},
-  journal = {Behavior Therapy},
-  year = {2023},
-}
-@Article{4,
-  title = {al Remote Research on Social Anxiety Using a New Teleconferencing Paradigm},
-  author = {Michael Telch},
-  journal = {Clinical Psychological Science},
-  year = {2023},
-}
-@Article{5,
-  title = {Multimodal Remote Research on Social Anxiety Using a New Teleconferencing Paradigm},
-  author = {Michael Telch},
-  journal = {Journal of Anxiety Disorders},
-  year = {2022},
-}
-@Article{6,
-  title = {Impact of Cannabidiol-Rich Hemp Extract Oil on Reconsolidation Disruption of Naturalistic Interoceptive Aversive Memory in Humans: Protocol for a Randomized Clinical Trial},
-  author = {Michael Telch},
-  journal = {Contemporary Clinical Trials},
-  year = {2022},
-}
-@Article{7,
-  title = {Brief imaginal exposure for PTSD:  Trajectories of change in distress},
-  author = {Michael Telch},
-  journal = {Cognitive and Behavioral Practice},
-  year = {2022},
-}
-@Article{8,
-  title = {Childhood family cohesiveness prospectively moderates risk for warzone psychopathology among deployed U.S. soldiers.},
-  author = {Michael Telch},
-  journal = {Journal of Traumatic Stress},
-  year = {2022},
-}
-@Article{9,
-  title = {Targeting Anxiety Sensitivity with Evidence Based Psychoeducation: A Randomized Waitlist-Controlled Trial of a Brief Standalone Digital Intervention},
-  author = {Michael Telch},
-  journal = {.},
-  year = {2022},
+	volume = {138},
+	pages = {107357},
+	author = {Didem Pehlivanoglu and Audrey Duarte and Paul Verhaeghen},
+	title = {Multiple identity tracking strategies vary by age: An {ERP} study},
+	journal = {Neuropsychologia}
 }
