--- a/preprints.bib
+++ b/preprints.bib
@@ -1,54 +1,9 @@
-@article{1Smits_2022,
-	doi = {10.21203/rs.3.rs-2298817/v1},
-	url = {https://doi.org/10.21203%2Frs.3.rs-2298817%2Fv1},
-	year = 2022,
-	month = {dec},
-	publisher = {Research Square Platform {LLC}},
-	author = {Jasper A. J. Smits and Marie-H. Monfils and Michael W. Otto and Michael J. Telch and Jason Shumake and Justin S. Feinstein and Sahib S. Khalsa and Adam R. Cobb and E. Marie Parsons and Laura J. Long and Bryan McSpadden and David Johnson and Alma Greenberg and Exposure Therapy Consortium Therapy Consortium},
-	title = {{CO}2 Reactivity as a Biomarker of Exposure-based Therapy Non-Response: Study Protocol}
-}
-@article{2Rubin_2022,
-	doi = {10.21203/rs.3.rs-2148468/v1},
-	url = {https://doi.org/10.21203%2Frs.3.rs-2148468%2Fv1},
-	year = 2022,
-	month = {oct},
-	publisher = {Research Square Platform {LLC}},
-	author = {Mikael Rubin and Caitlin Fischer and Michael J Telch},
-	title = {Efficacy of a Single Session Mindfulness Based Intervention}
-}
-@article{3Rubin_2021,
-	doi = {10.31219/osf.io/8tf7g},
-	url = {https://doi.org/10.31219%2Fosf.io%2F8tf7g},
+@article{1Justus_2021,
+	doi = {10.21203/rs.3.rs-257851/v1},
+	url = {https://doi.org/10.21203%2Frs.3.rs-257851%2Fv1},
 	year = 2021,
-	month = {aug},
-	publisher = {Center for Open Science},
-	author = {Mikael Rubin and Karl Muller and Mary Hayhoe and Michael Telch},
-	title = {Attentional Heterogeneity in Social Anxiety Disorder: Evidence from Hidden Markov Models}
-}
-@article{4Rubin_2021,
-	doi = {10.31219/osf.io/af3cu},
-	url = {https://doi.org/10.31219%2Fosf.io%2Faf3cu},
-	year = 2021,
-	month = {jul},
-	publisher = {Center for Open Science},
-	author = {Mikael Rubin and Karl Muller and Mary Hayhoe and Michael Telch},
-	title = {Attention Guidance Augmentation of Virtual Reality Exposure Therapy for Social Anxiety Disorder: A Pilot Randomized Controlled Trial}
-}
-@article{5Papini_2020,
-	doi = {10.31234/osf.io/4zr25},
-	url = {https://doi.org/10.31234%2Fosf.io%2F4zr25},
-	year = 2020,
-	month = {jun},
-	publisher = {Center for Open Science},
-	author = {Santiago Papini and Justin Dainer-Best and Mikael Rubin and Eric D. Zaizar and Michael J Telch and Jasper A. J. Smits},
-	title = {Psychological Networks can Identify Potential Pathways to Specific Intervention Targets for Anxiety in Response to Coronavirus Disease 2019 ({COVID}-19)}
-}
-@article{6Papini_2020,
-	doi = {10.31234/osf.io/re35k},
-	url = {https://doi.org/10.31234%2Fosf.io%2Fre35k},
-	year = 2020,
-	month = {apr},
-	publisher = {Center for Open Science},
-	author = {Santiago Papini and Mikael Rubin and Michael J Telch and Jasper A. J. Smits},
-	title = {The Impact of Criteria-based and Data-driven Sampling Approaches on the Heterogeneity and Interpretability of Posttraumatic Stress Symptom Networks}
+	month = {mar},
+	publisher = {Research Square Platform {LLC}},
+	author = {Sidni Justus and Patrick Powell and Audrey Duarte},
+	title = {Intact selective attention supports context memory in adults with autism spectrum disorder}
 }
