--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,14 @@
 @InCollection{1,
-  title = {The relationship between cognitive control and episodic memory across the adult lifespan. },
-  author = {Audrey Duarte},
-  booktitle = {Handbook of Cognitive Aging: A Life Course Perspective},
+  title = {Forgetting},
+  author = {Jarrod Lewis-Peacock},
+  booktitle = {Encyclopedia of the Human Brain, 2nd edition},
+  year = {2023},
+  publisher = {.},
+}
+@InCollection{2,
+  title = {Prospective memory forgetting},
+  author = {Jarrod Lewis-Peacock},
+  booktitle = {Memory failure},
   year = {2020},
   publisher = {.},
 }
