--- a/preprints.bib
+++ b/preprints.bib
@@ -1,9 +1,18 @@
-@article{1Justus_2021,
-	doi = {10.21203/rs.3.rs-257851/v1},
-	url = {https://doi.org/10.21203%2Frs.3.rs-257851%2Fv1},
+@article{1DeRosa_2023,
+	doi = {10.1101/2023.02.14.519204},
+	url = {https://doi.org/10.1101%2F2023.02.14.519204},
+	year = 2023,
+	month = {feb},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Jacob DeRosa and Hyojeong Kim and Jarrod Lewis-Peacock and Marie T. Banich},
+	title = {Neural Systems Underlying the Implementation of Working Memory Removal Operations}
+}
+@article{2Keller_2021,
+	doi = {10.1101/2021.12.08.471649},
+	url = {https://doi.org/10.1101%2F2021.12.08.471649},
 	year = 2021,
-	month = {mar},
-	publisher = {Research Square Platform {LLC}},
-	author = {Sidni Justus and Patrick Powell and Audrey Duarte},
-	title = {Intact selective attention supports context memory in adults with autism spectrum disorder}
+	month = {dec},
+	publisher = {Cold Spring Harbor Laboratory},
+	author = {Nicole E. Keller and Augustin C. Hennings and Emily K. Leiker and Jarrod A. Lewis-Peacock and Joseph E. Dunsmoor},
+	title = {Rewarded extinction increases amygdalar connectivity and stabilizes long-term memory traces in the {vmPFC}}
 }
