--- a/books.bib
+++ b/books.bib
@@ -1,6 +1,6 @@
 @Book{1,
-  title = {Social Beasts: Learning vicariously to flexibly adapt to a changing world. },
-  author = {Marie-H. Monfils},
-  publisher = {Princeton University Press},
-  year = {2023},
+  title = {Visual Memory},
+  author = {Jarrod Lewis-Peacock},
+  publisher = {Routledge},
+  year = {2022},
 }
